--- a/ProceduralSplines.uproject
+++ b/ProceduralSplines.uproject
@@ -39,6 +39,14 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "OculusVR",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Android"
+			]
 		}
 	]
 }
