Reading data table type from folder initiated

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,3 +70,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ProceduralSplines.GenericSystem.DataSetName",NewName="/Script/ProceduralSplines.GenericSystem.CSVDataSetName")
++PropertyRedirects=(OldName="/Script/ProceduralSplines.GenericSystem.DataSet",NewName="/Script/ProceduralSplines.GenericSystem.Data_Table")
++PropertyRedirects=(OldName="/Script/ProceduralSplines.GenericSystem.DataTableName",NewName="/Script/ProceduralSplines.GenericSystem.Data_Table")
